fix horizontal scroll

--- a/src/styles.css
+++ b/src/styles.css
@@ -6,6 +6,11 @@ html {
   background-color: rgb(243,245, 247);
 }
 
+html, body {
+    max-width: 100% !important;
+    overflow-x: hidden !important;
+}
+
 .content {
   height: 100vh;
   background-color: rgb(243,245, 247);
